Bug 470746 - IMAP Draft messages are marked as read (and thus won't be noticed); r=bienvenu ui-r=clarkbw