mailnews/compose/src/nsMsgCopy.cpp
@@ -310,8 +310,9 @@ nsMsgCopy::DoCopy(nsIFile *aDiskFile, nsIMsgFolder *dstFolder,
     NS_ENSURE_SUCCESS(rv, rv);
 
     rv = copyService->CopyFileMessage(aDiskFile, dstFolder, aMsgToReplace,
-                                      aIsDraft, nsMsgMessageFlags::Read, EmptyCString(),
-                                      copyListener, msgWindow);
+                                      aIsDraft,
+                                      aIsDraft ? 0 : nsMsgMessageFlags::Read,
+                                      EmptyCString(), copyListener, msgWindow);
     // copyListener->mCopyInProgress can only be set when we are in the
     // middle of the shutdown process
     while (copyListener->mCopyInProgress)
